# forward_telemetry_data

./: Cargo.toml  README.md  forward_data.service
config/: config.toml  log4rs.yaml
src/: data_fetch.rs  data_post.rs  main.rs  rand_dis.rs  ts_kv.rs
