[package]
name = "forward_data"
version = "0.1.0"
edition = "2021"


[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
time = "0.3.37"
rand = "0.9.0"
config = "0.15.8"
log = "0.4"
log4rs = "1.2"

once_cell = "1.19"
phf = { version = "0.11.3", features = ["macros"] }